--- a/css/lee.io.css
+++ b/css/lee.io.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -12,8 +13,9 @@ html, body {
 }
 
 .box {
-    color: #ffffff;
+    color: #ECECEC;
     font-family: "Lucida Console", Monaco, monospace;
+    font-size: 16px;
     height: 500px;
     width: 60%;
     margin-top: 5%;
@@ -31,4 +33,17 @@ html, body {
 #terminal {
     background: #1E1E1E;
     height: 100%;
+    word-break: break-all;
+    white-space: pre-wrap;
+    padding: 10px;
+    font-family: "Courier New";
+    line-height: 18px;
+    vertical-align: middle;
+    overflow: scroll;
+}
+
+#terminal .cursor {
+    background-color: #FFFFFF;
+    color: #1E1E1E;
+    display: inline-block;
 }
